hotfix according to TravisCI

--- a/tasks/additions/postgresql_RedHat.yml
+++ b/tasks/additions/postgresql_RedHat.yml
@@ -29,6 +29,8 @@
   - name: Initialize DB
     command: postgresql-setup initdb
     when: not pgdata_file.stat.exists
+    become: true
+    become_user: postgres
 
   - name: Start and enable Postgresql Database services
     systemd:
