hotfix according to TravisCI

--- a/tasks/additions/postgresql_RedHat.yml
+++ b/tasks/additions/postgresql_RedHat.yml
@@ -13,6 +13,7 @@
         - postgresql10-server
         - postgresql10
         - memcached
+        - python36-psycopg2
         - postgresql-libs
       state: present
     register: installed_postgres
