--- a/tasks/additions/python_RedHat.yml
+++ b/tasks/additions/python_RedHat.yml
@@ -3,6 +3,8 @@
   package:
     name:
       - python36
+      - python36-psycopg2
+      - python-psycopg2
     state: present
   register: installed_python_dependencies
   until: installed_python_dependencies is succeeded
