--- a/tasks/system/RedHat.yml
+++ b/tasks/system/RedHat.yml
@@ -9,8 +9,8 @@
 
   - name: Add AWX repository
     get_url:
-      url: https://copr.fedorainfracloud.org/coprs/mrmeee/ansible-awx/repo/epel-7/mrmeee-ansible-awx-epel-7.repo
-      dest: /etc/yum.repos.d/mrmeee-ansible-awx-epel-7.repo
+      url: https://copr.fedorainfracloud.org/coprs/mrmeee/awx/repo/epel-7/mrmeee-awx-epel-7.repo
+      dest: /etc/yum.repos.d/mrmeee-awx-epel-7.repo
 
   - name: Add EPEL, SCL repositories
     package:
