hotfix according to TravisCI

--- a/tasks/additions/awx_RedHat.yml
+++ b/tasks/additions/awx_RedHat.yml
@@ -6,7 +6,7 @@
 - name: Install AWX
   package:
     name:
-    - ansible-awx
+    - awx
     state: present
   register: installed_awx
   until: installed_awx is succeeded
