hotfix according to TravisCI

--- a/tasks/additions/awx_RedHat.yml
+++ b/tasks/additions/awx_RedHat.yml
@@ -40,7 +40,7 @@
     tower_password: password
     state: present
     tower_host: localhost
-    superuser: yes
+    superuser: true
   become: true
   become_user: awx
 
