hotfix according to TravisCI

--- a/tasks/additions/awx_RedHat.yml
+++ b/tasks/additions/awx_RedHat.yml
@@ -35,15 +35,10 @@
   changed_when: false
 
 - name: Initial configuration of AWX - create superuser
-  tower_user:
-    #tower_username: admin
-    #tower_password: password
-    username: admin
-    password: password
-    email: rcom-bflw-devops-team@epam.com
-    state: present
-    tower_host: localhost
-    superuser: true
+  shell: |
+    set -o pipefail
+    echo "from django.contrib.auth.models import User; User.objects.create_superuser('admin', 'root@localhost', 'password')" | \
+    /opt/awx/bin/awx-manage shell
   become: true
   become_user: awx
 
