--- a/tasks/additions/awx_RedHat.yml
+++ b/tasks/additions/awx_RedHat.yml
@@ -41,6 +41,7 @@
     /opt/awx/bin/awx-manage shell
   become: true
   become_user: awx
+  changed_when: false
 
 - name: Initial configuration of AWX - create preload data
   command: /opt/awx/bin/awx-manage create_preload_data
