--- a/tasks/additions/python_RedHat.yml
+++ b/tasks/additions/python_RedHat.yml
@@ -1,9 +1,9 @@
 ---
-- name: Install Python36
+- name: Install addons
   package:
     name:
-      - python36
-      - python36-psycopg2
+      #- python36
+      #- python36-psycopg2
       - python-psycopg2
     state: present
   register: installed_python_dependencies
