--- a/tasks/additions/python_RedHat.yml
+++ b/tasks/additions/python_RedHat.yml
@@ -1,24 +1,10 @@
 ---
-- name: Install addons
+- name: Install Python36 and addons
   package:
     name:
       - python36
       - python36-psycopg2
       - python-psycopg2
-      #- http://download-ib01.fedoraproject.org/pub/epel/7/x86_64/Packages/p/python36-3.6.8-1.el7.x86_64.rpm
-      #- http://download-ib01.fedoraproject.org/pub/epel/7/x86_64/Packages/p/python36-psycopg2-2.7.7-1.el7.x86_64.rpm
-      #- http://mirror.centos.org/centos/7/os/x86_64/Packages/python-psycopg2-2.5.1-3.el7.x86_64.rpm
-      #- http://download-ib01.fedoraproject.org/pub/epel/7/x86_64/Packages/p/python36-3.6.8-1.el7.x86_64.rpm
-
     state: present
   register: installed_python_dependencies
   until: installed_python_dependencies is succeeded
-  become: true
-  become_user: root
-
-#- name: Install Python36 addons
-#  shell: |
-#    set -o pipefail
-#    yum -y install --disablerepo='*' --enablerepo='mrmeee-ansible-awx, base' -x *-debuginfo rh-python36*
-#  when: true
-#  changed_when: false
